syntax = "proto3";

package transaction;

option go_package = ".;pb";

// 取引情報を表すメッセージ
message Transaction {
    string id = 1;
    string userId = 2;
    float amount = 3;
    string type = 4;
    int32 categoryId = 5;
    string categoryName = 6;
    string date = 7;
    string description = 8;
    bool isRecurring = 9;
}

message CreateTransactionRequest {
    string userId = 1;
    float amount = 2;
    string type = 3;
    int32 categoryId = 4;
    string categoryName = 5;
    string date = 6;
    string description = 7;
    bool isRecurring = 8;
}

message CreateTransactionResponse {
    Transaction transaction = 1;
}

message DeleteTransactionRequest {
    string id = 1;
}

message DeleteTransactionResponse {
    bool success = 1;
}

// 取引サービスの定義
service TransactionService {
    // 取引を作成
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
    // 取引を削除
    rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse);
}
